Add environment approval gates to Frontend workflow
- Restructure workflow from parallel to sequential deployment
- Add environment protection for dev, qa, and prod
- Implement image promotion pattern: dev → qa → prod
- Each promotion requires manual approval when protection rules are set
- Build once in dev, promote images to higher environments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,68 +8,183 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        environment: [dev, qa, prod]
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name: Set environment variables
-      run: |
-        if [ "${{ matrix.environment }}" == "dev" ]; then
-          echo "ACR_NAME=gopaldevacr" >> $GITHUB_ENV
-          echo "RESOURCE_GROUP=rg-gopal-dev" >> $GITHUB_ENV
-          echo "AKS_CLUSTER=aks-gopal-dev" >> $GITHUB_ENV
-          echo "NGINX_CONF=nginx.dev.conf" >> $GITHUB_ENV
-        elif [ "${{ matrix.environment }}" == "qa" ]; then
-          echo "ACR_NAME=gopalqaacr" >> $GITHUB_ENV
-          echo "RESOURCE_GROUP=rg-gopal-qa" >> $GITHUB_ENV
-          echo "AKS_CLUSTER=aks-gopal-qa" >> $GITHUB_ENV
-          echo "NGINX_CONF=nginx.qa.conf" >> $GITHUB_ENV
-        else
-          echo "ACR_NAME=gopalprodacr" >> $GITHUB_ENV
-          echo "RESOURCE_GROUP=rg-gopal-prod" >> $GITHUB_ENV
-          echo "AKS_CLUSTER=aks-gopal-prod" >> $GITHUB_ENV
-          echo "NGINX_CONF=nginx.prod.conf" >> $GITHUB_ENV
-        fi
 
     - name: Azure Login
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Get ACR login server
+    - name: Build image version
       run: |
-        ACR_LOGIN_SERVER=$(az acr show --name ${{ env.ACR_NAME }} --query loginServer --output tsv)
-        echo "ACR_LOGIN_SERVER=$ACR_LOGIN_SERVER" >> $GITHUB_ENV
+        SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
+        echo "IMAGE_TAG=dev-${SHORT_SHA}" >> $GITHUB_ENV
+
+    - name: Build and push to Dev ACR
+      run: |
+        az acr build \
+          --registry gopaldevacr \
+          --image frontend:${{ env.IMAGE_TAG }} \
+          --image frontend:dev-latest \
+          --build-arg NGINX_CONF=nginx.dev.conf \
+          --file Dockerfile \
+          .
+
+  deploy-dev:
+    needs: build
+    runs-on: ubuntu-latest
+    environment: dev
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Build image version
       run: |
         SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
-        echo "IMAGE_TAG=${{ matrix.environment }}-${SHORT_SHA}" >> $GITHUB_ENV
+        echo "IMAGE_TAG=dev-${SHORT_SHA}" >> $GITHUB_ENV
 
-    - name: Build and push Docker image to ACR
+    - name: Get ACR login server
       run: |
-        az acr build \
-          --registry ${{ env.ACR_NAME }} \
-          --image frontend:${{ env.IMAGE_TAG }} \
-          --image frontend:${{ matrix.environment }}-latest \
-          --build-arg NGINX_CONF=${{ env.NGINX_CONF }} \
-          --file Dockerfile \
-          .
+        ACR_LOGIN_SERVER=$(az acr show --name gopaldevacr --query loginServer --output tsv)
+        echo "ACR_LOGIN_SERVER=$ACR_LOGIN_SERVER" >> $GITHUB_ENV
 
     - name: Get AKS credentials
       run: |
         az aks get-credentials \
-          --resource-group ${{ env.RESOURCE_GROUP }} \
-          --name ${{ env.AKS_CLUSTER }} \
+          --resource-group rg-gopal-dev \
+          --name aks-gopal-dev \
           --overwrite-existing
 
-    - name: Deploy to AKS
+    - name: Deploy to Dev AKS
+      run: |
+        kubectl set image deployment/frontend \
+          frontend=${{ env.ACR_LOGIN_SERVER }}/frontend:${{ env.IMAGE_TAG }} \
+          -n gopal-app
+
+    - name: Wait for rollout
+      run: |
+        kubectl rollout status deployment/frontend -n gopal-app --timeout=5m
+
+    - name: Verify deployment
+      run: |
+        kubectl get pods -n gopal-app -l app=frontend
+        kubectl get ingress -n gopal-app
+
+  promote-to-qa:
+    needs: deploy-dev
+    runs-on: ubuntu-latest
+    environment: qa
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Build image version
+      run: |
+        SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
+        echo "IMAGE_TAG=qa-${SHORT_SHA}" >> $GITHUB_ENV
+
+    - name: Promote image to QA ACR
+      run: |
+        # Pull from dev
+        az acr login --name gopaldevacr
+        docker pull gopaldevacr.azurecr.io/frontend:dev-latest
+
+        # Tag and push to QA
+        az acr login --name gopalqaacr
+        docker tag gopaldevacr.azurecr.io/frontend:dev-latest gopalqaacr.azurecr.io/frontend:${{ env.IMAGE_TAG }}
+        docker tag gopaldevacr.azurecr.io/frontend:dev-latest gopalqaacr.azurecr.io/frontend:qa-latest
+        docker push gopalqaacr.azurecr.io/frontend:${{ env.IMAGE_TAG }}
+        docker push gopalqaacr.azurecr.io/frontend:qa-latest
+
+    - name: Get ACR login server
+      run: |
+        ACR_LOGIN_SERVER=$(az acr show --name gopalqaacr --query loginServer --output tsv)
+        echo "ACR_LOGIN_SERVER=$ACR_LOGIN_SERVER" >> $GITHUB_ENV
+
+    - name: Get AKS credentials
+      run: |
+        az aks get-credentials \
+          --resource-group rg-gopal-qa \
+          --name aks-gopal-qa \
+          --overwrite-existing
+
+    - name: Deploy to QA AKS
+      run: |
+        kubectl set image deployment/frontend \
+          frontend=${{ env.ACR_LOGIN_SERVER }}/frontend:${{ env.IMAGE_TAG }} \
+          -n gopal-app
+
+    - name: Wait for rollout
+      run: |
+        kubectl rollout status deployment/frontend -n gopal-app --timeout=5m
+
+    - name: Verify deployment
+      run: |
+        kubectl get pods -n gopal-app -l app=frontend
+        kubectl get ingress -n gopal-app
+
+  promote-to-prod:
+    needs: promote-to-qa
+    runs-on: ubuntu-latest
+    environment: prod
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Build image version
+      run: |
+        SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
+        echo "IMAGE_TAG=prod-${SHORT_SHA}" >> $GITHUB_ENV
+
+    - name: Promote image to Prod ACR
+      run: |
+        # Pull from QA
+        az acr login --name gopalqaacr
+        docker pull gopalqaacr.azurecr.io/frontend:qa-latest
+
+        # Tag and push to Prod
+        az acr login --name gopalprodacr
+        docker tag gopalqaacr.azurecr.io/frontend:qa-latest gopalprodacr.azurecr.io/frontend:${{ env.IMAGE_TAG }}
+        docker tag gopalqaacr.azurecr.io/frontend:qa-latest gopalprodacr.azurecr.io/frontend:prod-latest
+        docker push gopalprodacr.azurecr.io/frontend:${{ env.IMAGE_TAG }}
+        docker push gopalprodacr.azurecr.io/frontend:prod-latest
+
+    - name: Get ACR login server
+      run: |
+        ACR_LOGIN_SERVER=$(az acr show --name gopalprodacr --query loginServer --output tsv)
+        echo "ACR_LOGIN_SERVER=$ACR_LOGIN_SERVER" >> $GITHUB_ENV
+
+    - name: Get AKS credentials
+      run: |
+        az aks get-credentials \
+          --resource-group rg-gopal-prod \
+          --name aks-gopal-prod \
+          --overwrite-existing
+
+    - name: Deploy to Prod AKS
       run: |
         kubectl set image deployment/frontend \
           frontend=${{ env.ACR_LOGIN_SERVER }}/frontend:${{ env.IMAGE_TAG }} \
